--- a/localisation/simp_chinese/TNOIPN_CPC_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNOIPN_CPC_l_simp_chinese.yml
@@ -44,6 +44,16 @@
 ## Dynamic Modifiers ##
 ## National Focus ##
 ## Events ##
+ TNOIPN_CPC_news.1.t: "[Get_newspaper_header]西北派遣军崩溃"
+ TNOIPN_CPC_news.1.d: "令人震惊的消息从中国西北传来：在十数载“剿共”行动后，日本帝国陆军派往西北的军队与驻西北的中华民国国军已全部撤出西安，预计中国共产党军队将很快接手这一主要城市。\n\n自安田危机以来，共荣圈局势不断恶化，中国西北的易主则被认为是近期中日两国的又一重大失败。此外随着南京方面不断退缩，西康的国民政府也逐渐恢复军事活动，泛亚秩序在中国或许将会遭受更严重的挫折。"
+ TNOIPN_CPC_news.1.a: "他们还能闹出更大的动静？"
+ TNOIPN_CPC_news.1.b: "这只是暂时的退却......"
+ TNOIPN_CPC_news.1.c: "我们胜利了！"
+ TNOIPN_CPC_news.2.t: "[Get_newspaper_header]西北派遣军崩溃"
+ TNOIPN_CPC_news.2.d: "令人震惊的消息从中国西北传来：在十数载“剿共”行动后，日本帝国陆军派往西北的军队与驻西北的中华民国国军已全部撤出西安，预计西康国民政府军队将很快接手这一主要城市。\n\n自安田危机以来，共荣圈局势不断恶化，中国西北的易主则被认为是近期中日两国的又一重大失败。此外随着南京方面不断退缩，陕北的中国共产党也逐渐恢复军事活动，泛亚秩序在中国或许将会遭受更严重的挫折。"
+ TNOIPN_CPC_news.2.a: "他们还能闹出更大的动静？"
+ TNOIPN_CPC_news.2.b: "这只是暂时的退却......"
+ TNOIPN_CPC_news.2.c: "我们胜利了！"
 ## Decisions ##
 ## GUI ##
 ## Flags ##
