--- a/localisation/simp_chinese/TNOIPN_PKM_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNOIPN_PKM_l_simp_chinese.yml
@@ -4,8 +4,8 @@
  MCN_DEF: "马来亚华工暴动军"
  MCN_ADJ: "华工"
 ## States and VPs ##
- STATE_2525: "怡保"
- STATE_2526: "北霹雳"
+ STATE_2526: "怡保"
+ STATE_2527: "北霹雳"
 ## Cosmetic Tags ##
  MLY_IPN_PDRM: "马来亚民主共和国"
  MLY_IPN_PDRM_DEF: "马来亚民主共和国"
@@ -26,6 +26,9 @@
  MLY_Lee_Meng: "李明"
  MLY_Lee_Meng_sec_desc: "§Y特别行动处长\n马来亚共产党中央委员\n§e马来亚共产党§!\n毛泽东思想§!\n--------------\n§L§!"
  MLY_Tan_Khai_Hee: "陈凯希"
+ POLITICS_THAN_KHAIHEE_DESC: ""
+ MLY_Burnahuddin_Al_Helmy: "布哈努丁"
+ POLITICS_DR_BUHANUDDIN_DESC: ""
  MLY_Mustapha_Hussain: "慕斯达法胡先"
 ## Parties ##
  #initial
@@ -55,6 +58,8 @@
  MCN_conservatism_party_long: "槟城革命指挥部 - 马来西亚华人公会/平章会馆(Malaysian Chinese Association/Pingzhang Association)"
  MCN_despotism_party: "亲日派 - 半岛马来人运动"
  MCN_despotism_party_long: "日本合作者(Japanese Collaborators)"
+ SHO_socialist_1_party: "人民行动党"
+ SHO_socialist_1_party_long: "人民行动党(People's Action Party)"
  #first elections
  MLY_Barisan_Sosialis_PRM_party: "社会主义阵线 - 马来亚人民党"
  MLY_Barisan_Sosialis_PRM_party_long: "马来亚人民社会主义阵线 - 马来亚人民党(Barisan Sosialis - Parti Rakyat Malaya)"
@@ -71,6 +76,20 @@
  MLY_Barisan_Rakyat_PKMM_party: "人民民主阵线 - 马来国民党"
  MLY_Barisan_Rakyat_PKMM_party_long: "马来亚人民民主阵线 - 马来亚马来国民党(Barisan Rakyat Demokratik - Parti Kebangsaan Melayu Malaya)"
 ## Ideas ##
+ TNOIPN_idea_remove_tt: "当该民族精神被移除："
+ TNOIPN_PKM_manpower_running_dry: "人力枯竭"
+ TNOIPN_PKM_manpower_running_dry_desc: "马来亚抗日统一战线的斗争已经持续太久，曾经满怀热血前来抗日的青年如今已成中年，而其中大部分同志都牺牲在了日军的枪口下。如今，阵线面临严重的人力危机，而其在大城市内的招募网络也逐渐被日本情报机构破坏。如果不发生转机，如今的战士可能会成为马来亚最后一批战士。"
+ TNOIPN_PKM_detachment_military: "纵队模式的军队"
+ TNOIPN_PKM_detachment_military_desc: "马来亚抗日义勇军的编制并非西方标准的“军-师-旅-团-营”，而是便于游击的“纵队-支队-中队-小队”形式。分散的军事指挥使得日军的“清扫”政策很难取得效果，但同样意味着最高层难以协调大兵团作战，以及不同纵队之间的沟通极度困难。倘若义勇军夺取马来亚政权，军事正规化势在必行。"
+ TNOIPN_PKM_united_front_policy: "马来亚统一战线"
+ TNOIPN_PKM_united_front_policy_desc: "£PKM_texticon 马来亚共产党团结度：[?TNOIPN_PKM_unity_var]%\n£PKM_texticon 马来亚共产党合法性：[?TNOIPN_PKM_legitimacy_var]%\n--------------\n自从日本入侵，马来半岛的抵抗力量就远不止马来亚共产党。随着1948年牛车水事件爆发，原本与日本合作的大量民族主义者也纷纷脱离合作行列，加入抵抗运动。此外，洪门、会道门等各色社会组织也同样出于华人民族情谊，为马共成员提供藏身之处并输送情报。在星洲日军未曾发现的阴暗角落，统一战线的触手正伸向整个马来半岛。"
+ TNOIPN_PKM_CPC_KL_committee: "中国共产党南洋临时委员会"
+ TNOIPN_PKM_CPC_KL_committee_desc: "南洋临委第一书记：§Y廖承志§!\n\n\n\n\n£CPC_KL_committee_leader_portrait \n\n\n\n\n从1927年底到1928年初，随着海陆丰起义和广州起义的相继失败，大批中共党员曾被迫转移到南洋，建立中共南洋临时党支部，后改名为中共南洋临时工作委员会，简称中共南洋临委。如今，白色恐怖在中国日渐加剧之下，我们应当在已经稳定的根据地中为随时流亡来此的中共党员提供庇护。因此，中国共产党南洋临时委员会再一次成立，以帮助中国加速挣脱共荣圈的枷锁。"
+ TNOIPN_PKM_CPC_KL_committee_tt: "§Y若@CPC §R中国共产党§!解放全国，该民族精神将会发生变化！§!"
+ TNOIPN_PKM_National_Liberation_Army: "马来亚民族解放军"
+ TNOIPN_PKM_National_Liberation_Army_desc: ""
+ TNOIPN_PKM_gradual_easing: "加强军事训练"
+ TNOIPN_PKM_gradual_easing_desc: ""
 ## Dynamic Modifiers ##
  TNOIPN_liberation_MLY_dynamic_modifier: "根据地支持"
  TNOIPN_liberation_SHO_dynamic_modifier: "游击队抵抗"
@@ -156,11 +175,11 @@
  MLY_guerilla_peoples_army: "人民军队"
  MLY_guerilla_peoples_army_desc: ""
  MLY_guerilla_ease_out_teaming: "温和去纵队化"
- MLY_guerilla_ease_out_teaming_desc: ""
+ MLY_guerilla_ease_out_teaming_desc: "自1940年建军以来，人民抗日军便以纵队-支队编制进行战斗。如今，马来亚民族解放军尽管需要将编制正规化，但我们绝对不可操之过急，因指挥链条混乱而使战斗力下滑。\n\n因此，我们将加强接下来一段时间的军事训练强度，让战士们逐渐熟悉新的指挥体系，也让新体系的问题暴露出来，方便后续解决，以免在最终决战时造成灾难性的后果。"
  MLY_guerilla_red_warriors: "红色武装"
  MLY_guerilla_red_warriors_desc: ""
- MLY_guerilla_introduce_platoons: "引入连排制"
- MLY_guerilla_introduce_platoons_desc: ""
+ MLY_guerilla_introduce_platoons: "强行引入连排制"
+ MLY_guerilla_introduce_platoons_desc: "马来亚民族解放军随时都可能面临战争，因为南方敌人不可能放任我们偏安一隅。军事改革必须以最快速度完成，否则灭顶之灾将会降临到我们所有人头上。对于那些无法适应新编制的军官，加以降职或开除军籍的惩戒，将有助于确保军队快速适应新体系。至于这一过程中可能造成的悲剧，那就只好交由后人评说。"
  MLY_guerilla_army_discipline: "建设军事纪律"
  MLY_guerilla_army_discipline_desc: ""
  MLY_guerilla_jungle_training: "巩固丛林游击战"
@@ -223,6 +242,15 @@
  TNOIPN_MLY.8.t: "草蛇灰线"
  TNOIPN_MLY.8.desc: "曼谷这座城市，已经许久未见晴天了，一层层积雨云如穹顶一般将王国的心脏笼于灰蒙蒙的阴沉之中，空气中的水汽随之弥散开来，重重压在了每个人的肩上。在市中心的巷间，一个身着棕色大衣的男人提着一把雨伞以及一个黑色的公文包匆忙赶路，最终驻足于泰国民主派政治家比里·帕伊荣的宅邸前，他略微压低帽檐，与门前的守卫打了个照面后便大步走入其中，面见他的帕伊荣先生则早已在此处恭候多时。\n\n李安东摘下棕色的低檐帽，向面前的帕伊荣鞠了一躬以示礼貌，随后便缓缓入座。一整间房间只剩下帕伊荣与李安东两个人。再确认不会有其他的任何人偷听后，随着李安东滋一声拉开公文包的拉链，几封白花花的信件与文书便展现于帕伊荣面前，其中许多都由马共总书记陈平亲笔所写。\n\n“先生，作为驻曼谷的特派员，我想我有资格代表马来亚共产党向您作出担保：马共方面无意与泰方发生任何形式的冲突。如若先生能够帮助马来亚完成与泰国的勘界事宜，并与泰国建立相对友好的关系，马共可以帮助泰国清剿北马来亚地区的圣战者武装，这对我们双方的建设都有好处。”\n\n李安东缓缓拿起桌旁的茶盏，为自己和面前的帕伊荣各斟了一杯热茶，随后拿起自己的茶杯细细抿了一口，余光还不忘紧盯着放在桌上的文书。帕伊荣也用手拂去茶杯上弥漫的蒸气，而后取出一个精美的金丝铜盒，从中缓缓拈起那嵌着碎金的黑色钢笔，仔细在每一张信件与文书上写了简短的回信，并附上了自己的姓名。李安东会心一笑，将那杯茶饮尽后，他将所有文书一并揣入大衣内的口袋，与帕伊荣郑重地握了手，随后便压低自己的帽檐，在守卫的目视之下走出了宅邸的大门。"
  TNOIPN_MLY.8.a: "伏脉千里。"
+ TNOIPN_MLY.9.t: "抗日军的新生"
+ TNOIPN_MLY.9.desc: "被征用于做演练场的怡保大广场前，一排排曾经的人民抗日军战士正在列队集合。广场边的临时会场舞台中，军委主席刘尧与第十支队司令官慕沙阿莫欣赏着战士们的雄姿。\n\n“刘主席，我想问问。”慕沙阿莫皱了皱眉，问道。“不但九个支队要整编，第十支队也要一起打散吗？”\n刘尧沉默片刻。“阿莫同志，支队模式已经严重过时了。下一阶段的革命斗争需要下一阶段的军事模式，这你也听陈主席和杨总理讲过了。难道九个支队接受改编，留下第十支队落在后面？这不是拖了革命的后腿嘛。”\n慕沙阿莫叹了口气。“刘主席，这我懂啊。问题是，新军队暂定的全部政治委员都是马共党员，这......”\n\n“慕沙，你这难不成要犯了宗派主义、军阀主义错误不成？”刘尧似乎有些生气了，声量稍稍提高，周边有几个军官诧异地望了过来。“我直说吧，慕沙，马来国民党和马共的双党籍党员也不少，只要他们素质过硬，政治可靠，没人阻止他们当政委。”慕沙阿莫只得点了点头。“而且你放心，慕沙阿莫同志。我和陈主席已经决定了，西迪同志来当新军队的总政委。你还有什么要担心的吗？”\n\n又是一阵长久的沉默。\n\n许久，有传令兵前来通知刘尧，演练场的士兵要唱军歌了。刘尧这才跨步走下舞台。此时，远处已经飘荡起歌声，慕沙阿莫的思绪也随着这歌声飞向远方。"
+ TNOIPN_MLY.9.a: "“滚滚熔岩溅大地，人民呼声在怒号，旧世界地动山摇......”"
+ TNOIPN_MLY.10.t: "小仓库中"
+ TNOIPN_MLY.10.desc: "雨水敲打着铁皮屋顶，发出密集的声响，完美地掩盖了室内的谈话声。李光耀仔细地插上门闩，转过身，面对早已在阴影中等待的林清祥。\n\n“清祥同志，感谢你的冒险前来。”李光耀的声音低沉而平稳，没有任何寒暄，直接切入正题。\n林清祥点了点头，没有起身，他的目光迅速扫过房间唯一的入口。“光耀先生的消息很突然。现在风声很紧，宪兵队和‘特高科’的耳目比雨季的蚊子还多。你说有关系到我们共同生存的大事？”\n“正是。”李光耀坐到他对面，煤油灯的光照亮了他半张脸，另一半则隐在黑暗中。“单打独斗，我们谁都无法撼动目前的局面。你的统一战线，有组织，有群众基础，特别是在工人和乡村地区。而我......我和我的朋友们，能提供一些不同的东西：法律层面的掩护、与某些尚未完全被日方控制的本地精英及商业网络的有限沟通渠道。”\n\n林清祥沉默了片刻，手指无意识地敲击着桌面。外面的雨声更大了。他知道李光耀不是传统的革命者，他代表的是一种更偏向民族主义和社会民主的势力，甚至有些精英主义，与马来亚共产党的社会主义、武装斗争路线并不完全吻合。但在日本占领的铁幕下，生存和抵抗是第一位的。\n\n“情报共享......资源支持......”林清祥缓缓开口，“这确实是我们急需的。我们可以协调行动，避免冲突和内耗。针对港口、铁路的非武装破坏，或者传播反日信息，你的网络或许能起到作用。”他紧紧盯着李光耀，“但是，合作必须建立在共同对抗日本法西斯的基础上。未来的马来亚，包括新加坡，必须属于这里的人民，而不是换一批压迫者。”\n\n李光迎迎着他的目光，没有丝毫退缩。“当然。驱逐日寇，恢复自治，是我们共同的最低纲领。”他嘴角露出一丝难以捉摸的微笑，“未来的事，可以留给未来去解决。当前，我们是盟友。我们可以建立一条单线联络渠道，交换必要的信息，在特定行动上相互配合。”\n\n林清祥最终伸出手：“为了解放而合作。”\n\n李光耀握了上去，力道沉稳：“为了生存和最终的胜利。”\n\n雨仍在不停地下着，仿佛要洗刷掉这座城市所有的秘密，却不知新的、更复杂的秘密正在其掩盖下悄然滋生。"
+ TNOIPN_MLY.10.a: "革命就要开始了。"
+ TNOIPN_MLY.11.t: "北望故国"
+ TNOIPN_MLY.11.d: ""
+ TNOIPN_MLY.11.a: ""
 
  TNOIPN_MLY_postwar.1.t: "处置叛徒"
  TNOIPN_MLY_postwar.1.desc: ""
@@ -303,19 +331,26 @@
  MLY_PKM_party_GUI_politburo_Yeung_Kwo_tt: "杨果\n马来亚共产党副总书记\n马来亚共产党中央政治局委员"
  MLY_PKM_party_GUI_politburo_Yeung_Kwo_desc_tt: "§L如果说主席陈平是革命的顶梁柱，那么杨果就应当是革命的承重墙，坚定不移地推进着党的行动。\n\n1919年，杨果生在马来半岛一个偏远的华人村落。他自幼贫困，也屡屡遭受英帝国主义压迫，于是很早便接触到了马来亚华人内部的各种民族主义与革命思潮。其中，他对中国共产党抱有相当的好感。很快，他便加入了仍处于襁褓中的南洋共产党，也就是马来亚共产党的前身。正在他准备全心全意投入反英斗争时，命运和他开了个“大玩笑”——日本人打过来了。\n\n在日军威胁下，马共与英国达成合作，杨果也参与进了“马来亚人民抗日军”，并在党内一路高升。无论风吹雨打，他都坚守着革命的第一线，即使英、美、中国相继投降，也从未动摇。1946年，随着叛徒莱特被成功处决，杨果入选马共中央政治局，并被任命为马共副总书记，成为党内名副其实的二号人物。\n\n杨果对内以坚定而又宽厚为人著称，而由于其年纪较长，通常被视为陈平总书记的导师。可以说，整个抗日统一战线的重担，都有一部分压在他的肩上。§!"
  MLY_PKM_party_GUI_politburo_Liu_Yew_tt: "刘尧\n马来亚共产党中央军事委员会主席\n马来亚共产党中央政治局委员"
- MLY_PKM_party_GUI_politburo_Liu_Yew_desc_tt: ""
+ MLY_PKM_party_GUI_politburo_Liu_Yew_desc_tt: "§L1915年，刘尧生于海南岛琼州县嘉积镇桥头下村一穷苦农民家庭，原名刘昌标。他曾就读于私塾与嘉积镇高小，天资聪敏，勤奋好学，成绩优异。毕业后回家放牛，1931年加入中国共产党，担任桥头村党支部书记。1936年为逃避国民党的追捕，去了新加坡，在姐姐的茶店工作。1937年7月参加了马共领导的马来亚各界抗敌后援会，领导了店员部门的活动。\n\n1940年2月刘尧加入马共，1941年12月进英军“101特别训练学校”学习，1942年1月第一独立支队成立时，就任该队司令部管理部负责人。1942年10月，因叛徒的告密被宪兵逮捕并收到了严刑拷打，但在吉隆坡郊外服劳役时乘监视之隙逃了出来。1943年初，由于“一独”书记许庆彪、队长陈天庆均在日本扫荡中牺牲，他就任“一独”队长，并将队伍从三个中队发展到五个中队。1944年初就任该队党代表。在这期间，就任1942年5月成立的抗日军中央军事委员会主席，随后成为马共中央军事委员会主席。直到1945年，随着同盟国最后一批援助抵达，“一独”发展到十个中队。战后，由于莱特集团遭到清算，中央政治局空缺，刘尧进入马共中央委员会和中央政治局。\n\n作为新四军、马来亚人民抗日军双重将领与中共、马共双党籍领导人，刘尧是党内最坚定抗日、坚持毛泽东思想的军事领袖，并与东南亚其余处境相似的革命运动保持着良好的个人关系。§!"
  MLY_PKM_party_GUI_politburo_Lee_An_Tung_tt: "李安东\n马来亚共产党对外联络处主任\n马来亚共产党中央政治局委员"
- MLY_PKM_party_GUI_politburo_Lee_An_Tung_desc_tt: ""
+ MLY_PKM_party_GUI_politburo_Lee_An_Tung_desc_tt: "李安东生于1917年，祖籍广东潮州。原名李长镇，又名老李、老麦、老谢等。其自幼贫困，少时便进入工厂工作。1930年代，马来亚工人运动蓬勃发展时，李安东被介绍成为马共入党积极分子，随后于1940年马共解禁后正式入党。\n\n第二次世界大战期间，李安东负责协调各个独立队的运作，并被陈平看中，派遣为马来亚人民抗日军与盟军的联络员。战后，他秘密回到马来亚，于1946年被选为马共中央执行委员会委员以及马共中央政治局委员。1953年缅甸政变发生后，被任命为驻泰全权代表负责协调马共和泰国合作。\n\n李安东是马共的外交代表，通常在获取美、印、泰援助时扮演举足轻重的角色。"
  MLY_PKM_party_GUI_politburo_Abdullah_CD_tt: "阿都拉西迪\n马来亚共产党民族事务委员会主席\n马来亚共产党中央政治局委员"
- MLY_PKM_party_GUI_politburo_Abdullah_CD_desc_tt: ""
- MLY_PKM_party_GUI_PRM_party_logo_tt: "马来亚人民党"
+ MLY_PKM_party_GUI_politburo_Abdullah_CD_desc_tt: "1923年10月2日，阿都拉西迪出生于霹雳州甘榜兰博尔基里村。1939年他加入了英属马来亚第一个民族主义组织马来青年同盟，也即人民党与马来国民党前身。日本入侵后，阿都拉西迪接触到马来亚共产党领导的马来亚人民抗日军，因此参加了甘榜兰博尔基里当地的抗日同盟会并参与组织了抗日后备队。\n\n1945年5月，阿都拉西迪加入马来亚共产党，并在同年代表马共参与创建了二战后的重要政党马来亚国民党。1946年，他以马来亚国民党的合法身份活动时，当选为雪兰莪马来职工联合会主席及泛马来亚职工总会副主席。1948年牛车水事件爆发后，泛马工会联合会重组为马来亚劳工党，而工人民兵纷纷参与第十支队运动，于是在第十支队创建后，他担任其首个领导人，成功在丛林中开辟根据地。1955年，进入马共中央委员会。1957年，入选马共中央政治局。\n\n作为少有的马共、人民党、工党、马来国民党四党高级干部，阿都拉西迪在统一战线的马来人群体中拥有相当高的支持率，并在统一战线内部发生矛盾时扮演至关重要的角色。"
+ MLY_PKM_party_GUI_PRM_party_logo_tt: "马来亚人民党\n对阵线支持度：[?IPNMLY_PRM_support_var]%"
+ MLY_PRM_support_change_tt: "马来亚人民党对阵线支持度变化：[?IPNMLY_PRM_support_temp_var]"
  MLY_PKM_party_GUI_PRM_party_logo_desc_tt: "在马来亚抗日统一战线的各政党中，马来亚人民党成立最晚，但其势力仅次于马共居于第二，这得益于其激情而富有能力的领袖，阿莫布斯达曼。\n\n1948年马来国民党左翼与日本决裂后，最激进的一批泛马来左翼民族主义者选择抛弃犹豫不决、内斗不止的马来国民党，另外成立马来亚人民党开启武装斗争。随后，在阿莫布斯达曼奔走相告下，一大批工农群众转向支持人民抗日军。随后，马共总书记陈平力排众议，决定由布斯达曼管理根据地经济事务，从而团结马来族裔与统一战线成员。在此期间，人民党迅速在马来族中扩张，许多对参与马共感到犹豫的民族主义青年转而加入人民党，为根据地带来了不可或缺的新鲜血液。"
  MLY_PKM_party_GUI_PRM_party_leader_tt: "[Get_MLYPRM_leader_name]"
  MLY_PKM_party_GUI_PRM_party_leader_desc_tt: "[Get_MLYPRM_leader_desc]"
- MLY_PKM_party_GUI_PBM_party_logo_tt: "马来亚劳工党"
+ MLY_PKM_party_GUI_PBM_party_logo_tt: "马来亚劳工党\n对阵线支持度：[?IPNMLY_PBM_support_var]%"
+ MLY_PBM_support_change_tt: "马来亚劳工党对阵线支持度变化：[?IPNMLY_PBM_support_temp_var]"
  MLY_PKM_party_GUI_PBM_party_logo_desc_tt: "马来亚劳工党起源于英殖民时期的泛马工会联合会。日本占领半岛后，工会联合会解散，各地工会独立运作。1945年战争结束后，在25军的监督下，各工会重新组织为泛马来工党，以削弱马共对工人的号召力。第二次牛车水惨案后，激进派夺取泛马来工党的领导权，并宣布与合作政府一刀两断。很快，党重组为马来亚劳工党，从社会民主主义转向革命社会主义。该党自称为非种族的政党，设立华人与马来人主席各一位，但由于产业工人（尤其是工会工人）多为华人，党员仍以华人为主。\n\n槟城暴动后，是劳工党利用其号召力将罢工影响扩散到整个半岛，造成总罢工发生。"
- MLY_PKM_party_GUI_PKMM_party_logo_tt: "马来亚马来国民党"
- MLY_PKM_party_GUI_PKMM_party_logo_desc_tt: "1945年10月17日，随着印尼共和国宣布独立，受到苏加诺思想影响的马来亚左翼民族主义者决定将分散、俱乐部化的马来青年运动组织为正规政党。于是，在印尼来的 Mokhtaruddin Lasso 指挥下，丹马六甲、苏加诺遥控下，马来国民党正式成立，其指导思想为玛尔哈恩（贫民主义）、纳沙贡（民族-伊斯兰-共产主义）和大印度尼西亚主义（主张马来半岛并入印尼共和国），是印尼民族党的兄弟政党。\n\n党成立后，迅速吸纳了一大批马来亚激进民族主义者与共和派，同时还因其相对半岛马来人运动更加反日，得到了英国残余殖民买办的鼎力支持，资金充沛。1948年后，马来国民党开始分裂，左翼参与了“第十支队”运动，迅速而激进地向马来亚共产党靠拢。中左翼到右翼则反对脱离合作政府的议会政治，但右翼希望支持合作政府，而中左翼谴责合作政府，声援罢工工人。由于激进左翼在党内仍然具有影响力，中左翼的提案得到通过，气急败坏的25军将部分领导人监禁。不过，这导致马来国民党进一步远离议会政治，民族主义和反日倾向日趋浓厚。此外，由于苏加诺与日本的关系日趋紧密，马来国民党抛弃了大印度尼西亚主义，转而提倡“泛马来主义”——由马来国民党和马来共和国，而非沦为日本傀儡的印尼共和国，来统一整个南洋群岛。\n\n在统一战线各党中，马来国民党虽然同样坚定反日，但其对社会主义最为疏远。与此同时，他们能够得到美国的大力支持，因此其实力不容小觑。"
+ MLY_PKM_party_GUI_PBM_party_leader_tt: "[Get_MLYPBM_leader_name]"
+ MLY_PKM_party_GUI_PBM_party_leader_desc_tt: "[Get_MLYPBM_leader_desc]"
+ MLY_PKM_party_GUI_PKMM_party_logo_tt: "马来亚马来国民党\n对阵线支持度：[?IPNMLY_PKMM_support_var]%"
+ MLY_PKMM_support_change_tt: "马来亚马来国民党对阵线支持度变化：[?IPNMLY_PKMM_support_temp_var]"
+ MLY_PKM_party_GUI_PKMM_party_logo_desc_tt: "1945年10月17日，随着印尼共和国宣布独立，受到苏加诺思想影响的马来亚左翼民族主义者决定将分散、俱乐部化的马来青年运动组织为正规政党。于是，在印尼人穆哈鲁丁·拉索指挥下，丹马六甲、苏加诺遥控下，马来国民党正式成立，其指导思想为玛尔哈恩（贫民主义）、纳沙贡（民族-伊斯兰-共产主义）和大印度尼西亚主义（主张马来半岛并入印尼共和国），是印尼民族党的兄弟政党。\n\n党成立后，迅速吸纳了一大批马来亚激进民族主义者与共和派，同时还因其相对半岛马来人运动更加反日，得到了英国残余殖民买办的鼎力支持，资金充沛。1948年后，马来国民党开始分裂，左翼参与了“第十支队”运动，迅速而激进地向马来亚共产党靠拢。中左翼到右翼则反对脱离合作政府的议会政治，但右翼希望支持合作政府，而中左翼谴责合作政府，声援罢工工人。由于激进左翼在党内仍然具有影响力，中左翼的提案得到通过，气急败坏的25军将部分领导人监禁。不过，这导致马来国民党进一步远离议会政治，民族主义和反日倾向日趋浓厚。此外，由于苏加诺与日本的关系日趋紧密，马来国民党抛弃了大印度尼西亚主义，转而提倡“泛马来主义”——由马来国民党和马来共和国，而非沦为日本傀儡的印尼共和国，来统一整个南洋群岛。\n\n在统一战线各党中，马来国民党虽然同样坚定反日，但其对社会主义最为疏远。与此同时，他们能够得到美国的大力支持，因此其实力不容小觑。"
+ MLY_PKM_party_GUI_PKMM_party_leader_tt: "[Get_MLYPKMM_leader_name]"
+ MLY_PKM_party_GUI_PKMM_party_leader_desc_tt: "[Get_MLYPKMM_leader_desc]"
  #Malaysian Revolution
  MLY_revolution_GUI_PKM_info_tt: "£PKM_texticon 马来亚共产党团结度：[?TNOIPN_PKM_unity_var]%\n£PKM_texticon 马来亚共产党合法性：[?TNOIPN_PKM_legitimacy_var]%"
  TNOIPN_PKM_Unity_decrease_tt: "马来亚共产党团结度将会下降[?TNOIPN_PKM_unity_decrease_amount_temp_var]%"
