--- a/localisation/simp_chinese/replace/r_IPN_menu_tooltips_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/r_IPN_menu_tooltips_l_simp_chinese.yml
@@ -2,8 +2,8 @@
  TNO_menupic_tooltip_1: "§V你本来不知道何为天经，何为正信，但我以天经为光明，而借此光明引导我所欲引导的仆人。§!"
  TNO_menupic_tooltip_2: "§S你们当为正义和敬畏而互助，不要为罪恶和横暴而互助。§!"
  TNO_menupic_tooltip_3: "§x行一个小蚂蚁重的善事者，将见其善根；作一个小蚂蚁重的恶事者，将见其恶报。§!"
- tno_current_version: "TNO v1.8.0 - §Q乌鸦§!与§h公牛§!\nTNO: IPN v0.2beta - §V火中取栗§!"
- tno_current_version_date: "§Y2025年5月30日 - §Q乌鸦§!与§h公牛§!\n§Y2025年6月12日 - 火中取栗§!"
+ tno_current_version: "TNO v1.9.0a - §M十年不晚§!\nTNO: IPN v0.2beta - §V火中取栗§!"
+ tno_current_version_date: "§Y2025年11月20日§! - §M十年不晚§!\n§Y2025年6月12日§! - §V火中取栗§!"
  TNO_ugly_american_icon_tt: "§V铁杵成针§!"
  TNO_ugly_american_icon_tt_delayed: "§F一个人只要参与过为他人建立美好世界而努力，他就可以感觉不枉此生，死而无憾。\n——陈平§!"
- PKM_THENEWORDER_DESC: "马来亚是日本帝国用来稳定东南亚的“定海神针”，可尽管日本军队严防死守，但马来亚抗日武装仍然在密林中进行着日复一日的游击战争，他们坚信终有一日，铁杵成针......\n\n而随着全马总罢工与南洋日军陷入混乱，陈平总书记愈发坚信，解放之日就将到来。"
+ PKM_THENEWORDER_DESC: "马来亚是日本帝国用来稳定东南亚的“定海神针”，可尽管日本军队严防死守，但马来亚抗日武装仍然在密林中进行着日复一日的游击战争，他们坚信终有一日，铁杵成针，解放之日将会到来......\n\n而随着全马总罢工与南洋日军陷入混乱，陈平总书记愈发坚信，解放之日就将到来。"
