--- a/localisation/simp_chinese/replace/r_IPN_misc_replacements_l_simp_chinese.yml
+++ b/localisation/simp_chinese/replace/r_IPN_misc_replacements_l_simp_chinese.yml
@@ -1,4 +1,5 @@
 ﻿l_simp_chinese:
+ communist_mao_zedong_thought_subtype_desc: "\n\n\n\n£communist_mao_zedong_thought_picture \n\n\n\n\n\n虽然中国共产党人在抗日战争中败于敌寇之手，但其创始人之一和领袖——毛泽东的思想并未消亡，而是深山息马、静候帝国主义的动摇，而后伺机而动。\n\n毛泽东思想的直接理论来源便是毛泽东本人在长征期间和在延安根据地的著作，其中借用了部分农业社会主义的元素，但并不能简单认为是对其的一种小修小补。毛泽东思想承继了马克思、恩格斯、列宁和布哈林等人物的理论，以国际主义和反帝国主义为基础，但与传统的布尔什维主义不同的是，比起城市无产阶级，它对农村人民更为重视。它在以农村为主体的国家反对资本主义统治的斗争中，主张进行革命性的土地改革，建立适合本国国情的新民主主义制度，并认定游击战是以“持久人民战争”的形式开展革命斗争的最佳途径。\n\n毛泽东思想的支持者认为它是马克思主义思想的自然延续，也是布尔什维主义的下一阶段：在全世界各族被压迫人民掀起武装反抗的浪潮中，毛泽东思想的反帝基本原则得到了广泛的认同。它出离于传统马克思主义思想，开始在世界历史上崭露头角。"
  XIN: "新疆省"
  XIN_DEF: "中华苏维埃共和国新疆省"
  XIN_ADJ: "新疆"
@@ -19,11 +20,11 @@
  XIK_paternalism_party: "国民党"
  XIK_paternalism_party_long: "中国国民党"
  XIK_liberal_conservatism_party: "民主政团同盟 - 新青年党"
- XIK_liberal_conservatism_party_long: "中国青年党"
+ XIK_liberal_conservatism_party_long: "中国青年党§F\n--------------\n新青年党前身是青年党在四川与南京之外的“第三党部”。随着战争后期重庆政权逐渐向西昌撤退，青年党同样在西昌营建新党部，准备继续抱紧蒋系政权。战后青年党大部前往南京，国防参议员左舜生领导青年党剩余人员重组政党，参与西昌为数不多的民主政治。§!"
  XIK_liberalism_party: "民主政团同盟 - 宪政会(西南派)"
- XIK_liberalism_party_long: "中国宪政建国会"
+ XIK_liberalism_party_long: "中国宪政建国会§F\n--------------\n宪政会于重庆政府的解体中正式成立，其前身是民主同盟内部一批无党派独立人士，最远可以追溯到统一建国同志会。随后，随着西昌政府击退日军最后一轮进攻，民主同盟及其大部分成员组织也在实际上一分为二。对于宪政会，前往南京的分支尝试促成当局行宪，并在国民大会内对抗国民党，而留在西南地区与西昌的分支则鼓励国民党与西北的共产党重新接触，并希望促进西昌政权向宪政过渡。§!"
  XIK_socialist_party: "民主政团同盟 - 平民党"
- XIK_socialist_party_long: "中国平民革命党"
+ XIK_socialist_party_long: "中国平民革命党§F\n--------------\n1935年，中国国民党临时行动委员会更名为中华民族解放行动委员会，并随后参与成立民主政团同盟。随着重庆政府倾覆，解放行动委员会拒绝参加南京政府，选择留在西昌并再次更名，吸收一批中共党员后改名为中国平民革命党。其与当政的蒋系国民党常年敌对，但由于其在军内仍有一定影响力，他们在政坛上仍然保持存在。§!"
  XIK_communist_party: "中国共产党 - 西南局"
  XIK_communist_party_long: "中国共产党 - 西南局"
  GUX_liberated: "广西省"
