--- a/localisation/simp_chinese/TNOIPN_BRU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNOIPN_BRU_l_simp_chinese.yml
@@ -2,10 +2,21 @@
 ## Countries ##
 ## States and VPs ##
 ## Cosmetic Tags ##
+ BRU_revolution_republic: "文莱共和国"
+ BRU_revolution_republic_DEF: "文莱共和国"
+ BRU_revolution_republic_ADJ: "文莱"
+ BRU_revolution_republic_socialist: "北加里曼丹人民共和国"
+ BRU_revolution_republic_socialist_DEF: "北加里曼丹人民共和国"
+ BRU_revolution_republic_socialist_ADJ: "北加里曼丹"
+ BRU_revolution_republic_communist: "北加里曼丹人民共和国"
+ BRU_revolution_republic_communist_DEF: "北加里曼丹人民共和国"
+ BRU_revolution_republic_communist_ADJ: "北加里曼丹"
 ## Characters ##
  BRU_Wu_Chan: "伍禅"
  BRU_Wen_Min_Chyuan: "文铭权"
+ BRU_Bong_Kee_Chok: "黄纪作"
  BRU_Ahmad_Azahari: "阿末·阿扎哈里"
+ POLITICS_A_M_AZAHARI_DESC: "谢赫艾哈迈德·阿扎哈里·本·谢赫·马哈茂德，或按更广为人知的名称阿末·阿扎哈里，于1928年出生于纳闽皇家殖民地。其母为文莱马来人，祖父谢赫·阿卜杜勒·哈米德则有阿拉伯贵族血统，“谢赫”因此成为他的名字。通过家庭关系，他自幼得以结识文莱第27任苏丹艾哈迈德·塔朱丁的弟弟奥马尔·阿里·赛义夫丁，并就读于文莱市天主教传教学校学习英语。15岁那年，随着日军向南洋进军，15岁的阿扎哈里前往仍处于和平的荷属东印度学习兽医。\n\n由于日本奖学金发放方面的疏漏，阿扎哈里因证件不全被控制爪哇岛的日本宪兵队拘留，但短暂的拘留生活后他成功前往学校。在爪哇，阿扎哈里结识了最为重要的朋友，穆罕默德·哈达，并顺势加入了印度尼西亚独立运动。1945年印尼建国后，他加入了印尼民族党与印尼人民民兵组织。\n\n1947年，在完成对爪哇地区的最终划分后，印尼军队缩编，阿扎哈里因此退役并前往日本统治下的昭南岛。通过印尼民族党，尤其是哈达的私人关系，他联络到了印尼民族党在马来半岛的兄弟组织马来亚马来国民党，并在昭南岛的马来人自治组织中谋得职位。然而，1948年的牛车水事件令日本裁撤该机构，阿扎哈里则追随马来国民党左派中的激进分子加入了新成立的马来亚人民党。在听闻其背景后，阿莫布斯达曼选择派遣他回到文莱，在北婆罗洲建立人民党的分支机构。\n\n1955年1月，阿扎哈里与德高望重的文莱文学家沙利·马斯里共同创建了文莱人民党，主张彻底的反帝国主义与反殖民斗争，以及对文莱专制君主的挑战。1958年，阿扎哈里成功被苏丹委任为文莱咨议局的议员，他借助这一身份成立了文莱人民党的准军事部队—北加里曼丹国民军。随着1960年马来大起义的开始，文莱人民党中的各色激进派也开始联络砂拉越人民联合党、婆罗洲反日同盟、大印度尼西亚党等左翼或泛民族主义运动。终于，阿扎哈里被说服宣布武装暴动，带领北加里曼丹国民军争取推翻苏丹国与日本新殖民统治，建立北婆罗洲共和国。"
  BRU_Yassin_Affandi: "亚辛·阿凡迪"
  BRU_Salleh_Masri: "沙利·马斯里"
 ## Parties ##
