--- a/localisation/simp_chinese/TNOIPN_PKM_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNOIPN_PKM_l_simp_chinese.yml
@@ -338,11 +338,25 @@
  #
  TNOIPN_MLY_PKM_party_category: "革命统一战线"
  TNOIPN_MLY_north_borneo_revolt_category: "北婆罗洲角力"
- TNOIPN_MLY_north_borneo_revolt_category_desc: "随着林梦的一声枪响，北婆罗洲陷入了全面暴动中。如今，追求泛民族主义的印度尼西亚、追求革命的共产党以及希望独立的本土民族主义者形成了合力，向日本占领军发起冲击，而东京也在迅速调集军队予以镇压。我们无从得知北婆罗洲的未来将会如何发展，但可以肯定的是，这片土地的命运将会在这场暴动中被彻底改写。\n\n我方如今支持：[Get_TNOIPN_MLY_north_borneo_revolt_supporter_sploc]\n\n当地局势：\n文莱苏丹国 [?TNOIPN_MLY_north_borneo_revolt_power_japan_var] : [?TNOIPN_MLY_north_borneo_revolt_power_resistance_var] 文莱起义军\n婆罗洲反日同盟 [?TNOIPN_MLY_north_borneo_revolt_power_communist_var] : [?TNOIPN_MLY_north_borneo_revolt_power_nationalist_var] 北加里曼丹国民军\n文莱人民党内力量对比: 左派[?TNOIPN_MLY_north_borneo_revolt_BRP_left_var] : 独立派 [?TNOIPN_MLY_north_borneo_revolt_BRP_independent_var] : 大印尼派 [?TNOIPN_MLY_north_borneo_revolt_BRP_indonesia_var]\n\n由于第三十七军正在迅速回防北婆罗洲，反抗组织若要取得成功，必须在第三十七军赶回前将自身实力分数提升至文莱苏丹国政府的两倍以上，以夺取文莱全境。相反，东京及其盟友需要维持文莱局势不至崩溃，直到三十七军完全回防。"
+ TNOIPN_MLY_north_borneo_revolt_category_desc: "随着林梦的一声枪响，北婆罗洲陷入了全面暴动中。如今，追求泛民族主义的印度尼西亚、追求革命的共产党以及希望独立的本土民族主义者形成了合力，向日本占领军发起冲击，而东京也在迅速调集军队予以镇压。我们无从得知北婆罗洲的未来将会如何发展，但可以肯定的是，这片土地的命运将会在这场暴动中被彻底改写。\n\n我方如今支持：[Get_TNOIPN_MLY_north_borneo_revolt_supporter_sploc]\n\n当地局势：\n§Y文莱苏丹国§! [?global.TNOIPN_MLY_north_borneo_revolt_power_japan_var] : [?global.TNOIPN_MLY_north_borneo_revolt_power_resistance_var] §Y文莱起义军§!\n§Y婆罗洲反日同盟§! [?global.TNOIPN_MLY_north_borneo_revolt_power_communist_var] : [?global.TNOIPN_MLY_north_borneo_revolt_power_nationalist_var] §Y北加里曼丹国民军§!\n文莱人民党内力量对比: §Y左派§! [?global.TNOIPN_MLY_north_borneo_revolt_BRP_left_var] : §Y独立派§! [?global.TNOIPN_MLY_north_borneo_revolt_BRP_independent_var] : §Y大印尼派§! [?global.TNOIPN_MLY_north_borneo_revolt_BRP_indonesia_var]\n\n由于§Y第三十七军§!正在迅速回防北婆罗洲，反抗组织若要取得成功，必须在第三十七军赶回前将自身实力分数提升至文莱苏丹国政府的§Y两倍§!以上，以夺取文莱全境。相反，东京及其盟友需要维持文莱局势不至崩溃，直到三十七军完全回防。"
  TNOIPN_MLY_north_borneo_revolt_supporter_communist: "§e婆罗洲反日同盟会§!§Y及其共产主义游击队§!"
  TNOIPN_MLY_north_borneo_revolt_supporter_indonesia: "§B北加里曼丹国民军§!§Y及大印度尼西亚主义者§!"
  TNOIPN_MLY_north_borneo_revolt_supporter_japan: "§G日本帝国第三十七军§!§Y及文莱苏丹国政府§!"
  TNOIPN_MLY_north_borneo_revolt_supporter_NA: "§Y尚未选定盟友§!"
+ TNOIPN_MLY_north_borneo_revolt_power_japan_rise_tt: "§Y文莱苏丹国§!力量将会§G上升§!"
+ TNOIPN_MLY_north_borneo_revolt_power_nationalist_rise_tt: "§Y文莱起义军§!力量将会§G上升§!"
+ TNOIPN_MLY_north_borneo_revolt_power_communist_rise_tt: "§Y婆罗洲反日同盟§!力量将会§G上升§!"
+ TNOIPN_MLY_north_borneo_revolt_power_indonesia_rise_tt: "§Y北加里曼丹国民军§!力量将会§G上升§!"
+ TNOIPN_MLY_north_borneo_revolt_BRP_left_rise_tt: "文莱人民党§Y左派§!力量将会§G上升§!"
+ TNOIPN_MLY_north_borneo_revolt_BRP_independent_rise_tt: "文莱人民党§Y独立派§!力量将会§G上升§!"
+ TNOIPN_MLY_north_borneo_revolt_BRP_indonesia_rise_tt: "文莱人民党§Y大印尼派§!力量将会§G上升§!"
+ TNOIPN_MLY_north_borneo_revolt_37A_Coming_Back_mission: "第三十七军回防"
+ TNOIPN_MLY_north_borneo_revolt_PKM_strengthen_singapore_connections_decision: "加强新加坡联络线"
+ TNOIPN_MLY_north_borneo_revolt_PKM_strengthen_singapore_connections_decision_desc: "通常来讲，党中央与伍禅同志的联系需要通过新加坡支部沟通半合法状态的劳工党，再通过劳工党的林清祥同志联系婆罗洲地区华人组织从而与婆罗洲反日同盟沟通。如今，我们必须扩大对这条联络线的投入，以确保为文莱的革命者们提供我们所能提供的任何支持。"
+ TNOIPN_MLY_north_borneo_revolt_PKM_prepare_weapon_stashes_decision: "提供武器支援"
+ TNOIPN_MLY_north_borneo_revolt_PKM_prepare_weapon_stashes_decision_desc: "婆罗洲反日同盟的游击队目前正面临着严重的武器短缺问题。为了确保他们能够继续对抗日军，我们必须设法为他们提供武器支援。我们可以通过秘密渠道将武器运送到婆罗洲，或者在当地建立武器储藏点，以便游击队能够随时获取所需的装备。"
+ TNOIPN_MLY_north_borneo_revolt_PKM_concessions_to_Soekarno_decision: "向苏加诺让步"
+ TNOIPN_MLY_north_borneo_revolt_PKM_concessions_to_Soekarno_decision_desc: "在北加里曼丹的革命者行列中，婆罗洲反日同盟与北加里曼丹国民军尽管存在意识形态分歧，但如今都处于反抗日军占领的同一战壕中。因此，我们也可以通过进行部分阵线内政治让步的方式，争取印度尼西亚总统苏加诺的进一步支持，从而增强文莱革命者的总体实力。此外，与苏加诺合作对文莱人民党施加影响，也能够帮助我们争取文莱人民的民意支持，减少文莱人民党内部对君主立宪“独立”的支持力量。"
 ## GUI ##
  #Parti Komunis Malaya
  MLY_PKM_party_GUI_gensec_portrait_tt: "[Get_MLYPKM_gensec_name]"
