--- a/localisation/simp_chinese/TNOIPN_BRU_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNOIPN_BRU_l_simp_chinese.yml
@@ -13,6 +13,7 @@
  BRU_revolution_republic_communist_ADJ: "北加里曼丹"
 ## Characters ##
  BRU_Wu_Chan: "伍禅"
+ POLITICS_WU_CHAN_DESC: "1904年8月31日，伍赞天出生于广东海丰。其父曾是村内的教书先生，但家道中落沦为平民后独自一人前往英属马来亚的砂拉越谋生，留下幼子随母在故乡生活。1925年，伍禅随兄举家移居砂拉越寻父，住在砂拉越新尧湾，1926年留学日本东京高等师范学校。1931年九一八事变后，伍禅回国，在福建、广西等地中学任教，后任上海文化生活出版社编辑。\n\n卢沟桥事变爆发后，伍禅怀着一颗爱国心重返沙捞越，从事华侨文化教育工作，任华侨学校校长，《沙捞越日报》编辑，同时动员大马华侨为抗战提供支持。1941年12月，日军进攻北加里曼丹；第二年年初伍禅便与古晋和石隆门的一批志同道合的热血青年成立了北婆罗洲反日同盟会，秘密筹划沙捞越沦陷后的抗日工作。此时，伍禅的留日经历为其组织抗日团体提供了很好的掩护——早在日军进攻古晋时，伍禅就曾主动向日军提供假情报声称英军已逃往荷属东印度，为英军撤退争取到了时间；而日军指挥官见他是日本名校毕业，便不予怀疑将军队派往了其他地区。此后日军便把伍禅视为“自己人”，虽然伍禅拒绝在伪政府任职，但还是被授予了在石隆门买卖大米的特权，遂为他资助抗日活动提供了稳定的资金来源。\n\n伍禅曾打算组织游击队与日寇直接对抗，为此找到了《沙捞越日报》的总编涂耐冰商议。涂耐冰是福建莆田人，本是中央研究院气象研究所出身，因组织民团参与福建事变而流亡北加里曼丹。伍禅正是看中了涂耐冰曾经的“军事经历”，才找他商议此事。但涂耐冰认为直接举兵风险太大，劝伍禅搁置这一议题，北婆罗洲反日同盟会则继续从事抗日宣传及为盟军搜集情报等活动。在北婆罗洲反日同盟会成立几个月后，属于荷属东印度的坤甸和山口洋一带地区效仿其成立了西婆罗洲反日同盟会，并派人到古晋商讨合作打击日寇的大计。由于山口洋一带日军较少且有大片原始森林，两个反日同盟会决定合并为婆罗洲反日同盟会，以伍禅为最高领导人，在西加里曼丹组织游击队抗日。此后伍禅等人便忙于搜集军火运往西加里曼丹的山林中。\n\n第二次世界大战结束后，婆罗洲反日同盟会的主要据点遭到第三十七军扫荡部队突袭，伍禅暴露反日身份后被捕，关押于昭南岛。所幸留日时期的同学关系将其保释出狱，而随后他又在昭南岛的政治风波中成功联络到流亡马来亚的廖承志，并借此机会加入中国共产党与马来亚共产党。1950年，伍禅秘密潜回砂拉越，带领马共支援的干部队伍重组婆罗洲反日同盟会，并利用二战期间的秘密武器库存持续进行游击战争。"
  BRU_Wen_Min_Chyuan: "文铭权"
  BRU_Bong_Kee_Chok: "黄纪作"
  BRU_Ahmad_Azahari: "阿末·阿扎哈里"
