--- a/localisation/simp_chinese/TNOIPN_PKM_l_simp_chinese.yml
+++ b/localisation/simp_chinese/TNOIPN_PKM_l_simp_chinese.yml
@@ -262,6 +262,9 @@
  TNOIPN_MLY_Brunei.3.t: "文莱叛乱"
  TNOIPN_MLY_Brunei.3.desc: "（占位符）北加里曼丹国民军暴动，支持三十七军平叛"
  TNOIPN_MLY_Brunei.3.a: "我们必须阻止这场可笑的“革命”。"
+ TNOIPN_MLY_Brunei.5.t: "接应勇士"
+ TNOIPN_MLY_Brunei.5.desc: "伍禅走在怡宝的街道上，雨后的空气中弥漫着泥土与青草的气息。他一路辗转，从燃烧中的文莱乘船到昭南岛，再通过工会之间的地下联络线抵达槟城，最后才得到槟城华人公会的帮助抵达怡宝根据地。\n\n在他身后是一支数十人的队伍，士兵们身穿破旧军装，手持蒙尘的土枪与钢叉，但他们的眼神中闪烁着坚定的光芒。伍禅知道，这些人都是从文莱逃出来的北加里曼丹国民军战士，他们在暴动失败后被迫逃亡，如今终于找到了能够收留他们的根据地。\n\n伍禅走到队伍前方，向李安东介绍了反日同盟的情况。他们将会在这里得到休整和补给，随后再决定下一步的行动计划。\n\n“同志们，欢迎来到马来亚共产党的根据地。这里是你们新的家园！”李安东高声说道，战士们纷纷回应着他的号召，眼中燃起了新的希望之火。"
+ TNOIPN_MLY_Brunei.5.a: "“欢迎回家，同志们！”"
 
 
  TNOIPN_MLY_postwar.1.t: "处置叛徒"
@@ -309,6 +312,15 @@
  TNOIPN_MLY_worldnews.2.b: "伍禅同志，你还好吗......"
  TNOIPN_MLY_worldnews.2.c: "是时候调回第三十七军了。"
  TNOIPN_MLY_worldnews.2.e: "我们的同胞们一定会成功！"
+ TNOIPN_MLY_worldnews.3.t: "[Get_newspaper_header]文莱革命"
+ TNOIPN_MLY_worldnews.3.d: "在经历数个月的激烈战斗后，文莱苏丹国政府遭到推翻，[BRU.GetRulingParty]主导建立了全新的共和国。此次革命的主要支持者是印度尼西亚总统苏加诺，而据传自由国家组织也暗中对该运动有所支持。\n\n夺权的[BRU.GetRulingParty]宣布将建立基于社会主义原则的人民民主共和国，并承诺将与邻国建立友好关系。与此同时，文莱境内的亲日派势力则被迅速清除。\n\n东京方面对文莱的革命表示强烈谴责，并誓言将采取一切必要措施恢复其在婆罗洲的统治。先前未能及时赶赴文莱的第三十七军如今正在砂拉越与沙巴地区集结，准备向文莱发起两面夹击。与此同时，引人注目的是，同为“大东亚共荣圈”成员的印度尼西亚共和国、泰共和国与缅甸共和国均已承认新文莱的合法地位。"
+ TNOIPN_MLY_worldnews.3.a: "为革命欢呼！"
+ TNOIPN_MLY_worldnews.4.t: "[Get_newspaper_header]文莱革命"
+ TNOIPN_MLY_worldnews.4.d: "在经历数个月的激烈战斗后，文莱苏丹国政府遭到推翻，[BRU.GetRulingParty]主导建立了全新的共和国。此次革命的主要支持者是印度尼西亚总统苏加诺，而据传自由国家组织也暗中对该运动有所支持。\n\n夺权的[BRU.GetRulingParty]宣布将建立建立反帝国主义、反殖民主义的新国家，宣称包括纳闽在内的全部北加里曼丹地区为其合法领土，并宣布将举行与印度尼西亚的合并公投。\n\n东京方面对文莱的革命表示谴责，并已撤走大部分侨民，同时要求文莱新政府归还占领中的砂拉越州林梦县。与此同时，自由国家组织与印度尼西亚均已承认新政府的合法地位。"
+ TNOIPN_MLY_worldnews.4.a: "为革命欢呼！"
+ TNOIPN_MLY_worldnews.5.t: "[Get_newspaper_header]文莱暴动平息"
+ TNOIPN_MLY_worldnews.5.d: "在数个月的激烈战斗中，文莱苏丹国始终维持着自身稳定，并成功抵御住了来自北加里曼丹国民军的侵袭。如今，随着第三十七军主力返回北婆罗洲，暴动军已被彻底镇压。\n\n东京方面对第三十七军的回防表示欢迎，并誓言将继续维护日本在婆罗洲的统治。与此同时，文莱苏丹国政府也宣布将对暴动军的支持者进行严厉惩罚，并呼吁国际社会谴责印度尼西亚总统苏加诺对暴动的支持。\n\n然而，由于北加国民军主力已经通过林梦撤往印度尼西亚，而共产主义游击队则在吸纳大量文莱本地左翼力量后进入丛林，文莱境内的动荡似乎并未就此结束。"
+ TNOIPN_MLY_worldnews.5.a: "有趣。"
 ## Decisions ##
  TNOIPN_Malaysian_Revolution_category: "马来亚革命"
  TNOIPN_Malaysian_Revolution_category_desc: ""
